--- a/AreaCal.html
+++ b/AreaCal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .R{
+        .result-box{
             display:flex ;
             justify-content: start;
             align-items: center;
@@ -13,7 +13,7 @@
 
         }
 
-        #r-space{
+        #result{
             display: block;
             width: 250px;
         }
@@ -22,8 +22,8 @@
 <body>
     <main id="app">
         <h1>Area Calculate</h1>
-        <div class="R">
-            <p class="">Result :</p><span id="r-space"></span>
+        <div class="result-box">
+            <p class="">Result :</p><span id="result"></span>
             <button id="store">Store</button>
             <button id="clear">Clear</button>
 
@@ -32,11 +32,11 @@
         <div class="">
             <input type="text" id="widthInput"  placeholder="width">
             <input type="text" id="heightInput"  placeholder="height">
-            <button id="CBtn">Calculate</button>
+            <button id="calcBtn">Calculate</button>
         </div>
     </main>
 
-<ul>
+<ul class="records">
     <li> 15 ft * 50 ft = 750 ft <sup>2</sup></li>
 
     <li> 12 ft * 20 ft = 260 ft <sup>2</sup></li>
